--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,8 +26,8 @@
 # en:
 #   'true': 'foo'
 #
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
+# To learn more, please read the Rails Internationalization user
+# available at https://users.rubyonrails.org/i18n.html.
 
 en:
   hello: "Hello world"
